# gc-bucket-alsf-predicting-nuclear-speckles

./: README.md  project.cue  pyproject.toml
terraform/operations/: .terraform.lock.hcl  README.md  accounts.tf  backend.tf  terraform.tfvars  versions.tf
terraform/state-management/: .terraform.lock.hcl  README.md  terraform.tfvars  versions.tf
utilities/data-provider/: README.md  gsutil_sync.bat
utilities/data-receiver/: README.md
